updates for checkin and and timezone awareness
